external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_struct_match.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/matching/invalid_struct_match.move:7:13
  │
7 │             Box { x: T } => (),
  │             ^^^ Unexpected module member identifier. A module member identifier is not a valid variant

